<resources>
    <string name="app_name">Tarea Labo 2</string>
    <string name="text1">jugador 1</string>
    <string name="text2">jugador 2</string>
    <string name="text_button_player1">Punto jugador 1</string>
    <string name="text_button_player2">Puntojugador 2</string>
    <string name="text_contador_player1">0</string>
    <string name="text_contador_player2">0</string>
    <string name="juego_Id">juego 0</string>
    <string name="nombrar_ganador"></string>
    <string name="boton_ganador"></string>


</resources>
