<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.luisro00005513.tarealabo2.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingVertical="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--=========imagenes de jugadores ==================== -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@color/Juego"
                    android:layout_weight="1"
                    android:src="@drawable/jugador1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/image_id1"/>

                <ImageView
                    android:background="@color/Juego"
                    android:layout_weight="1"
                    android:src="@drawable/jugador2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/image_id2"/>

            </LinearLayout>
            <!--=========imagenes de jugadores (fin)==================== -->


            <!--================ textviews puntaje==============-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text1"
                    android:id="@+id/text_id1"
                    />

                <TextView
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:padding="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:id="@+id/text_id2"
                    />
            </LinearLayout>
            <!--============ textviews puntaje(fin)=============-->



            <!--=============  caja contadores ==============-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:background="@color/colorCajasTexto"
                    android:paddingHorizontal="20dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/text_contador_player1"
                    android:id="@+id/text_contador_player1"/>

                <TextView
                    android:background="@color/colorCajasTexto"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/text_contador_player2"
                    android:id="@+id/text_contador_player2"/>

            </LinearLayout>
            <!--=============  caja contadores (fin)==========-->


            <!--=============  botones ===================-->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:onClick="darClick"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_player1"
                    android:id="@+id/button_idplayer1"
                    />

                <Button
                    android:onClick="darClick"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_player2"
                    android:id="@+id/button_idplayer2"
                    />
            </LinearLayout>
            <!--================= botones (fin) ============-->

            <!--=========contador de juego==================== -->
            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18dp"
                android:text="@string/juego_Id"
                android:id="@+id/juegoId"
                />
            <!--=========contador de juego (fin)==================== -->

        </LinearLayout>
    </ScrollView>
</LinearLayout>
